--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
       <meta charset="utf-8" />
       <title>News</title>
       <link rel="stylesheet" href="./css/site.css" />
+      <script src="js/config.js"></script>
+      <script src="js/htmlHelper.js"></script>
       <script src="js/newsTemplates.js"></script>
       <script src="js/app.js"></script>
   </head>
   <body>
   	<div id="header">News with EcmaScript 6</div>
   	<div id="mainArticle"></div>
-  	<div id="articles">
- 	
-  	</div>
+  	<div id="articles"></div>
   	<div>Powered by <a href="https://newsapi.org">News API</a></div>
   </body>
 </html>
